--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     repositories {
-        maven { url 'https://jitpack.io' }
+//        maven { url 'https://jitpack.io' }
         google()
         jcenter()
     }
